@@ -1,16 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 2d25e6ce89e49bcd12c8ae9b4b6d2c79 ChangeLog 2383
+MD5 a84a6314814e99bf28e00d7e4c1c8085 ChangeLog 2654
 MD5 4e2c598e8cb4ff972704246ffa0af579 gnu-smalltalk-2.1.11.ebuild 2193
 MD5 54532d9cd3833e3c65d9136f3a1b6458 metadata.xml 630
+MD5 a7020ab27d5f56caef00aeb10a67c12d gnu-smalltalk-2.1.12.ebuild 2192
+MD5 4335632b4c5c11b3d8d38f821befc042 files/digest-gnu-smalltalk-2.1.12 69
 MD5 1b43b00217fd402ab0f309202f633e46 files/50gnu-smalltalk-gentoo.el 268
 MD5 21a8210b48bb02fc7aad1a7d58bd7c1d files/2.1.11-gst-image-temp.patch 2123
 MD5 96390d8b21fc85acdf2e84a2d91c6a66 files/digest-gnu-smalltalk-2.1.11 69
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.2 (GNU/Linux)
 
-iD8DBQFDGz3qBQBy/eDH5uERAhqsAKDOzaoqtizxpgRo0sqfQzaLEDYmCACdGAqw
-7hEcwnxqAbmGp/453EmAUgM=
-=ePGr
+iD8DBQFDHJ9yBQBy/eDH5uERAqBbAKCC5q6uQkuBfPKOsQCDnL1YheFuLACgovTs
+FJg0bpHXOag2QV4qv3CI80Y=
+=wBHD
 -----END PGP SIGNATURE-----
