@@ -1,0 +1,1 @@
+MD5 209219aea25b11d516256f24af97e5ad smalltalk-2.1.12.tar.gz 3336852
